# sashimi

./: Cargo.toml  README.md  rustfmt.toml  scheme.monopic  scheme.txt
src/: cipher.rs  hash.rs  main.rs
