[package]
name = "sashimi"
version = "0.0.1"
description = "Simplistic, lightweight encryption."
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rpassword = "6.0.1"
sha3 = "0.10.1"
aes = "0.8.1"
zip = "0.6.0"
hex-literal = "0.3.4"
clap = { version = "3.1.8", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
chrono = "0.4.19"